# SO2

./: CMakeLists.txt  firmware_cliente
doc/html/: annotated.html  classes.html  convolucion_8py.html  dir_737949ac39eb398e0ccf9831c00bbe78.html  dir_8e1fc579e302ed9b8504cd334a4dc341.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  main_8c.html  main_8c__incl.map  main_8c__incl.md5  namespaceconvolucion.html  namespacemembers.html  namespacemembers_vars.html  namespaces.html  struct_auth.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  classes_0.js  defines_1.js  defines_3.js  defines_4.js  defines_6.js  defines_7.js  defines_8.js  files_0.js  functions_0.js  functions_1.js  functions_3.js  namespaces_0.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
src/server/: Makefile  main.c
